# score_virtualization

./: .bazelrc  .gitattributes  .gitignore  MODULE.bazel
virtualization/: BUILD  init_rpi4.build  run_qemu.sh  virtualization_build.bzl
virtualization/install/aarch64le/boot/sys/: startup-bcm2711-rpi4
virtualization/install/aarch64le/sbin/: devb-ram  devb-sdmmc-bcm2711  devc-serminiuart  devc-serpl011  i2c-bcm2711  mkqnx6fs  spi-bcm2711
virtualization/install/etc/system/config/spi/: spi-template.conf
